--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -215,31 +215,34 @@ article {
   }
 }
 
-.box-gradient{
-  min-height: 100%;
-  min-width: 100%;
-    background: linear-gradient(180deg, rgba(255,255,255,0) 37%, rgba(0,0,0,1) 100%);
-}
+.card-box::after{
+     background-image: linear-gradient(180deg, rgba(255,255,255,0) 52%, rgba(0,0,0,1) 100%);
+     content: 'Will Smith é banido do Oscar por 10 anos após tapa em Chris Rock<';
+     display: block;
+     position: absolute;
+     top: 0;
+     bottom: 0;
+     width: 561px;
 
-.box-3{
-  min-height: 676px;
-  background: $ui-color-primary-light;
+    }
+
+.box{
+    bottom: 0;
+    left: 0;
+    padding: 30px;
 }
 
 .box-2{
-  height: 320px;
-  background: $ui-color-primary;
+    top: 0;
+    left: 0;
+    background-color: #E62121;
+    padding: 4px;
+    padding-left: 14px;
+    padding-right: 14px;
 }
 
-.box{
-  height: 320px;
-  background: $aco;
-}
 
-.card-text, .card-text p{
-  max-width: 22.5rem;
-  min-width: 22.5rem;
-}
+
 
 .text-prata{
   color: $prata !important;
@@ -273,3 +276,10 @@ article {
   font-size: 36px !important;
 }
 
+.position-absolute{
+    position: absolute !important;
+}
+
+.position-relative{
+    position: relative !important;
+}
