alteracao no font size mobile index.html

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -72,9 +72,11 @@ $font-sizes: (
   16: 16px,
   18: 18px,
   20: 20px,
+  21: 21px,
   24: 24px,
   28: 28px,
   30: 30px,
+  36: 36px,
   38: 38px,
   48: 48px,
   56: 56px,
